--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@david.kucsai/react-pdf-table": "^0.3.0",
+    "@react-pdf/renderer": "^1.6.12",
+    "bootstrap": "^4.5.3",
+    "npm-upgrade": "^2.0.4",
     "react": "16.11.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "16.11.0",
     "react-scripts": "3.2.0",
     "truffle-contract": "^4.0.31",
+    "truffle-hdwallet-provider": "^1.0.0-web3one.5",
     "web3": "1.2.2"
   },
   "scripts": {
